task20/repo1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginx-ingress
  namespace: exam-xurshid
spec:
  ingressClassName: nginx
  rules:
  - host: xnamozov.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: repo1-19
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
